--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ disqus:
 addthis:  # Get an account at www.addthis.com. You may need to at least enable the Sharing Sidebar and Sharing Buttons functions to fully use our design.
   pubid: ra-54f225a84524edd3 # This is the AddThis button pubid to display social sharing buttons on the website. Used in the header template.
 navigation: # For the navigation menu. Don't use index.html. urls should end with a directory.
-  - text: Language:
+  - text: Choose Language/语言 - 
     url: /
   - text: English
     url: /en/
