--- a/_config.yml
+++ b/_config.yml
@@ -136,6 +136,8 @@ exclude:
   - _cache
   - Makefile
   - deploy.sh
+  - publish.sh
+  - nbconv.sh
   - fig.yml
   - _posts/_private/
   - _config/
